# Temporal-difference-learning-in-Spiking-networks

./: .gitignore  .gitmodules  README.md  actor_critic.txt  association_shift.m  daspnet.m  daspnet_original.m  dipl_theme.md  gridworld.m  group_encouragement.m  oddaja.txt  rstdp_simple.m  spnet_debugged.m
further_research/: synchrony.py
nest/: .debug_synapse.py.kate-swp  .gridworld_ac.py.swp  .inspect_weights.py.swp  .test.py.swp  actor_crytic.py  best_connections.pkl  c_current_out.txt  c_delayed_out.txt  caputre_output.py  connections.pkl  connections_1000i_1.pkl  connections_3000i_1.pkl  connections_5x5.pkl  connections__bb.pkl  connections_b.pkl  custom_synapse.py  debug_synapse.py  debug_synapse_b.py  gridworld.py  gridworld_ac.py  inspect_weights.py  instructions.txt  networks.py  run_ac.py  test.py  test_nest.py
nest/delayed_eligibility_synapse/: .test.py.swp  CMakeLists.txt  delayed_synapse_demo.py  install.sh  test.cpp  test.py  testRSTDP.py  test_output.py
nest/delayed_eligibility_synapse/fig_3_4_and_4_1_delayed_trace/: delayed_synapse_demo.py
nest/delayed_eligibility_synapse/src/: CMakeLists.txt  mymodule.cpp  stdp_delayed_eligibility_synapse.cpp  stdp_delayed_eligibility_synapse.h  stdp_delayed_eligibility_synapse_names.cpp  stdp_delayed_eligibility_synapse_names.h  stdp_dopamine_synapse_test.cpp  stdp_dopamine_synapse_test.h
predstavitev/: .plan.txt.swp  .presentation_1.tex.swp  plan.txt  presentation_1.aux  presentation_1.fdb_latexmk  presentation_1.fls  presentation_1.nav  presentation_1.out  presentation_1.tex  presentation_1.toc
resources/: rdtsp_grid.ipynb
results/: F1 config.txt  F3 config.txt  F5 - 3 config.txt  F5 setup.txt  F6 - 1 config.txt  F7-config.txt  T8-config.txt
thesis/: .Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.tex.swp  .dropboard.tex.kate-swp  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.aux  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.bbl  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.bcf  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.blg  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.fdb_latexmk  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.fls  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.out  Spodbujevano_ucenje_na_impulznih_nevronskih_mrezah_Matjaz_Pogacnik.run.xml  dropboard.aux  dropboard.fdb_latexmk  dropboard.fls  (+7 more)
(+150 files in other folders)
